Bug fixing for android. Remove max-height for editor modal body on small viewports

--- a/less/app.less
+++ b/less/app.less
@@ -859,9 +859,20 @@ section#the-goods { margin-top: 44px; }
             &.fade.in {
                 top: 0;
             }
+
+            .playground-form {
+                height: 100%;
+            }
+
             .modal-body {
                 box-sizing: border-box;
                 padding-bottom: 100px;
+                position: absolute;
+                top: 0;
+                left: 0;
+                right: 0;
+                bottom: 64px;
+                max-height: none;
             }
 
             .modal-footer {
